# raftscope

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README  README.md  index.html  style.css
.github/workflows/: deploy.yml
docs/superpowers/specs/: 2026-06-19-rust-wasm-rewrite-design.md
src/: lib.rs  raft.rs  state.rs  util.rs
