[package]
name = "raftscope"
version = "0.1.0"
edition = "2021"
description = "Browser visualization of the Raft consensus algorithm, in Rust + WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Node",
  "NodeList",
  "Event",
  "EventTarget",
  "MouseEvent",
  "PointerEvent",
  "KeyboardEvent",
  "CssStyleDeclaration",
  "DomTokenList",
  "Performance",
  "Storage",
  "DomRect",
]

[profile.release]
opt-level = "s"
lto = true
